--- a/assets/less/pages/contact.less
+++ b/assets/less/pages/contact.less
@@ -10,6 +10,10 @@
         input {
             cursor: pointer;
         }
+
+        input {
+            margin-right: 10px;
+        }
     }
 
     span {
@@ -37,8 +41,8 @@
 
 .wpcf7-not-valid-tip {
     position: absolute;
-    bottom: -16px;
-    left: 0;
+    bottom: -14px;
+    right: 0;
     font-size: 13px;
 }
 
@@ -161,6 +165,21 @@
         width: 100%;
         // margin-bottom: 10px;
 
+        &.textarea-field {
+            .wpcf7-not-valid-tip {
+                position: absolute;
+                bottom: -3px;
+                right: 25px;
+                font-size: 13px;
+            }
+        }
+
+        &.phone {
+            p {
+                display: none;
+            }
+        }
+
         &.tel-field {
             label {
                 left: 52px;
@@ -170,7 +189,7 @@
 
         input {
             height: 50px;
-            padding: 15px 15px 5px;
+            padding: 15px 15px 5px 0;
             border: none;
             width: 100%;
             border-bottom: 1px solid @main-color;
@@ -195,7 +214,6 @@
 
         textarea {
             padding-top: 30px;
-            padding-left: 15px;
             border: none;
             width: 100%;
             max-width: 100%;
@@ -236,7 +254,53 @@
 
     .wpcf7-list-item {
         margin: 0;
+
+        input {
+            opacity: 0;
+        }
     }
+
+
+    // dynamic checkbox
+    .wpcf7-list-item-label {
+        cursor: auto;
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 17px;
+            height: 17px;
+            top: 0;
+            left: 0;
+            border-radius: 50%;
+            border: 1px solid @main-color;
+        }
+
+        &:after {
+            content: "";
+            display: none;
+            position: absolute;
+            width: 11px;
+            height: 11px;
+            top: 3px;
+            left: 3px;
+            border-radius: 50%;
+            background: @main-color;
+            transition: all .3s ease-in-out;
+        }
+    }
+
+    input:checked {
+        &+.wpcf7-list-item-label {
+            &:after {
+                display: block;
+                transition: all .3s ease-in-out;
+            }
+        }
+    }
+
+    // dynamic checkbox END
 }
 
 
@@ -397,9 +461,15 @@
     // }
 
     .wpcf7-form-control {
-        padding: 14px 60px 14px 32px;
-    }
+        padding: 16px 60px 16px 60px;
+        font-size: 18px;
+        color: @main-color !important;
 
+        &:hover {
+            background: @main-color;
+            color: @main-color-light !important;
+        }
+    }
 
     // &::before {
     //     content: '';
@@ -428,20 +498,20 @@
     // }
 
 
-    @media screen and (max-width:600px) {
-        border-radius: 140px !important;
+    // @media screen and (max-width:600px) {
+    //     border-radius: 140px !important;
 
-        p {
-            border-radius: 140px !important;
-        }
+    //     p {
+    //         border-radius: 140px !important;
+    //     }
 
-        .button {
-            background-color: @main-color;
-            width: 130px !important;
-            height: 50px !important;
-            border-radius: 140px !important;
-        }
-    }
+    //     .button {
+    //         background-color: @main-color;
+    //         width: 130px !important;
+    //         height: 50px !important;
+    //         border-radius: 140px !important;
+    //     }
+    // }
 }
 
 .wpcf7-form-control.wpcf7-submit.btn.btn-ghost {
@@ -505,4 +575,14 @@
 
 .country-name {
     color: @main-color;
+}
+
+.iti {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+
+    .wpcf7-form-control.wpcf7-telephone_input.telephone_input_class {
+        padding-left: 53px;
+    }
 }
