--- a/assets/less/pages/general.less
+++ b/assets/less/pages/general.less
@@ -1214,12 +1214,13 @@
 }
 
 .pretitle {
-    font-size: 19px;
+    font-size: 16px;
     font-family: @alt-font;
     color: @secondary-color;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 23px;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .margin-bottom {
