--- a/assets/less/pages/terms.less
+++ b/assets/less/pages/terms.less
@@ -11,7 +11,7 @@
             text-transform: capitalize;
 
             @media screen and (max-width:600px) {
-                margin: 25px 0 15px 0;
+                margin: 25px auto 15px 0;
                 font-size: 20px;
             }
         }
@@ -23,7 +23,7 @@
             text-transform: capitalize;
 
             @media screen and (max-width:600px) {
-                margin: 25px 0 15px 0;
+                margin: 25px auto 15px 0;
                 font-size: 18px;
             }
         }
